# PDF-Tools

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/v1/: health.py  metrics.py  router.py
app/api/v1/pdf/: fill.py  inspect.py  merge.py  merge_drive.py
app/clients/: google_drive.py
app/core/: authentication.py  configuration.py  errors.py  exceptions.py  logging.py  metrics.py  middleware.py  openapi.py  request_id.py  responses.py  version.py
app/middleware/: exception_handler.py  request_context.py
app/models/: error.py  pdf_fill.py  pdf_merge_drive.py  response.py
app/services/: drive.py  pdf_forms.py  pdf_inspection.py  pdf_merge.py
app/utils/: __init__.py  filenames.py
deployment/systemd/: pdf-tools.service
docs/api/: README.md
docs/architecture/: README.md
docs/deployment/: README.md  RELEASE.md
docs/development/: README.md
docs/examples/: README.md
docs/security/: README.md
scripts/: deploy.sh  release-check.sh  smoke-test.sh
tests/integration/: test_api_platform.py  test_openapi.py  test_pdf_merge_api.py
tests/unit/: test_drive_merge.py  test_metrics.py  test_pdf_fill.py  test_pdf_merge.py
